addons/jaeger/hotrod-app-haproxy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-hotrod-haproxy
  annotations:
    haproxy.org/path-rewrite: /hotrod(/|$)(.*) /\2
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - path: /hotrod
        pathType: Prefix
        backend:
          service:
            name: jaeger-hotrod
            port:
              number: 80
