addons/jaeger/hotrod-app-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-hotrod-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hotrod(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: jaeger-hotrod
            port:
              number: 80
